Avatars added web

--- a/website/templates/index_model1.html
+++ b/website/templates/index_model1.html
@@ -20,7 +20,14 @@
     }
   </script>
 
-  <script type="module" src="static/js/avatar.js"></script>
+  <script type="module" src="static/js/avatar2.js"></script>
+
+  <!-- <script>
+    // Pass the model path to the JS file
+    const modelPath = "{{ model_path }}";
+    //const model_path = model_path;
+  </script> -->
+
 </head>  
 
 <body>
@@ -29,8 +36,8 @@
       <ul>
         <li><a href="/">Get Size</a></li>
         <li><a href="/model2">Try Fittone</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#projects">Tutorial</a></li>
+        <li><a href="#contact">About Us</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +49,8 @@
 
       <h1 class="hero-title">Hi there 👋</h1>
       <h1>I'm your <span class='gradient-text'>Virtual dressing room</span></h1>
-      <p>I'm web developer with a passion for creating interactive, 3D web experiences.</p>
+      <p>AI makes virtual fitting fast , fun and flawless with 3D web experience.</p>
+      <p>Fill out the form below and find the coller size that suit you...</p>
     </section>
   </div>
 
